# payrollPK

./: .env.sample  .gitignore  README.md  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2024_10_11_2030-2099e6a0a8af_add_base.py  2024_10_12_0024-6d72b08ddf89_add_user_model_and_position_models.py  2024_10_12_0100-be44c76ab597_fix_user_model.py  2024_10_12_0302-27e16ae23318_fix_user_relationship_with_position.py  2024_10_12_0305-ac03ae82b0f4_fix_picture.py  2024_10_13_0326-108e65062548_fix_user.py  2024_10_13_0354-4cd81a7643b2_remove_image_attach.py  2024_10_14_0032-f1292aadfaac_add_admin_field.py  2024_10_14_0309-71e2c3331aa7_add_none_in_position.py
backend/api_v1/: __init__.py  regex.py
backend/api_v1/auth/: __init__.py  auth.py  exeptions.py  tokens.py  utils.py  views.py
backend/api_v1/positions/: __init__.py  crud.py  dependencies.py  permissions.py  schemas.py  views.py
backend/api_v1/users/: __init__.py  crud.py  dependencies.py  exeptions.py  passwords.py  permissions.py  schemas.py  superuser.py  utils.py  views.py
backend/config/: __init__.py  settings.py
backend/config/db/: __init__.py  db_setup.py
backend/config/models/: __init__.py  base.py  position.py  user.py
backend/handlers/: handle_error.py
backend/hashers/: __init__.py  hasher_password.py
backend/tests/: conftest.py  test_hasher.py  test_password.py  test_position.py  test_users.py
